err/etlalchemy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.0.13.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy_Utils-0.30.9.egg-info'...
Listing './lib/python3.5/site-packages/Tempita-0.5.2.egg-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/etlalchemy'...
Listing './lib/python3.5/site-packages/etlalchemy-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/migrate'...
Listing './lib/python3.5/site-packages/migrate/changeset'...
Listing './lib/python3.5/site-packages/migrate/changeset/databases'...
Listing './lib/python3.5/site-packages/migrate/tests'...
Listing './lib/python3.5/site-packages/migrate/tests/changeset'...
Listing './lib/python3.5/site-packages/migrate/tests/changeset/databases'...
Listing './lib/python3.5/site-packages/migrate/tests/fixture'...
Listing './lib/python3.5/site-packages/migrate/tests/integrated'...
Listing './lib/python3.5/site-packages/migrate/tests/versioning'...
Listing './lib/python3.5/site-packages/migrate/versioning'...
Compiling './lib/python3.5/site-packages/migrate/versioning/migrate_repository.py'...
***   File "./lib/python3.5/site-packages/migrate/versioning/migrate_repository.py", line 21
    print """Usage: %(prog)s repository-to-migrate

    Upgrade your repository to the new flat format.

    NOTE: You should probably make a backup before running this.
    """ % {'prog': sys.argv[0]}
                                                  

                                                   

                                                                
      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/migrate/versioning/script'...
Listing './lib/python3.5/site-packages/migrate/versioning/templates'...
Listing './lib/python3.5/site-packages/migrate/versioning/templates/manage'...
Listing './lib/python3.5/site-packages/migrate/versioning/templates/repository'...
Listing './lib/python3.5/site-packages/migrate/versioning/templates/repository/default'...
Listing './lib/python3.5/site-packages/migrate/versioning/templates/repository/default/versions'...
Listing './lib/python3.5/site-packages/migrate/versioning/templates/repository/pylons'...
Listing './lib/python3.5/site-packages/migrate/versioning/templates/repository/pylons/versions'...
Listing './lib/python3.5/site-packages/migrate/versioning/templates/script'...
Listing './lib/python3.5/site-packages/migrate/versioning/templates/sql_script'...
Listing './lib/python3.5/site-packages/migrate/versioning/util'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-1.10.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py-1.4.31.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.9.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/sqlalchemy_migrate-0.9.7.egg-info'...
Listing './lib/python3.5/site-packages/sqlalchemy_utils'...
Listing './lib/python3.5/site-packages/sqlalchemy_utils/functions'...
Listing './lib/python3.5/site-packages/sqlalchemy_utils/primitives'...
Listing './lib/python3.5/site-packages/sqlalchemy_utils/relationships'...
Listing './lib/python3.5/site-packages/sqlalchemy_utils/types'...
Listing './lib/python3.5/site-packages/sqlparse'...
Listing './lib/python3.5/site-packages/sqlparse/engine'...
Listing './lib/python3.5/site-packages/sqlparse/filters'...
Listing './lib/python3.5/site-packages/sqlparse-0.2.4.dist-info'...
Listing './lib/python3.5/site-packages/tempita'...
Listing './share'...
Listing './share/python-wheels'...
